[package]
name = "blanket"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
percent-encoding = "2.3.1"
rand = "0.9.1"
reqwest = "0.12.21"
serde = "1.0.219"
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
sha1 = "0.10.6"
